--- a/src/app/components/agregar-hotel/agregar-hotel.component.html
+++ b/src/app/components/agregar-hotel/agregar-hotel.component.html
@@ -19,6 +19,10 @@
                                 <label for="direccion" class="form-label">Direccion</label>
                                 <input type="text" class="form-control" id="direccion" placeholder="Tu direccion" name="direccion" #direccion="ngModel" [(ngModel)]="hotelUsuarioModel.direccion">
                             </div>
+                            <div class="col-sm-12">
+                                <label for="imagen" class="form-label">Imagen</label>
+                                <input type="text" class="form-control" id="imagen" placeholder="Tu imagen" name="imagen" #imagen="ngModel" [(ngModel)]="hotelUsuarioModel.imagen">
+                            </div>
 
                             <div class="col-sm-12">
                                 <label for="pais" class="form-label">Pais</label>
