--- a/src/app/components/habitaciones-hotel/habitaciones-hotel.component.html
+++ b/src/app/components/habitaciones-hotel/habitaciones-hotel.component.html
@@ -76,7 +76,7 @@
   
           <h2>{{eve.evento}}</h2>
           <p>{{eve.fecha}}</p>
-          <p><a class="btn btn-secondary" href="#">View details »</a></p>
+          <!-- <p><a class="btn btn-secondary" href="#">View details »</a></p> -->
         </div><!-- /.col-lg-4 -->
         
       </div><!-- /.row -->
@@ -85,7 +85,7 @@
       <!-- START THE FEATURETTES -->
   
       <hr class="featurette-divider">
-      <h1 class="featurette-heading">Habitaciones<span class="text-muted"> </span></h1>
+      <h1 class="featurette-heading">Habitaciones<span class="text-muted"> </span></h1> 
 
       <div *ngFor="let habitacionesNGF of habitacionModelGet; let i = index">
   
@@ -94,7 +94,8 @@
             
           <h2 class="featurette-heading">{{habitacionesNGF.nombre}}<span class="text-muted"> Q {{habitacionesNGF.precio}} c/noche</span></h2>
           <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
-          <button type="button" class="btn btn-primary" [routerLink]="['/detalle-habitacion',habitacionesNGF._id]"><i class="bi bi-info-square"></i> Detalle</button>
+          <button type="button" class="btn btn-primary" [routerLink]="['/reservacion',habitacionesNGF._id]">Reservar</button>
+          <!-- <button type="button" class="btn btn-primary" [routerLink]="['/detalle-habitacion',habitacionesNGF._id]"><i class="bi bi-info-square"></i> Detalle</button> -->
 
         </div>
         <div class="col-md-5">
@@ -107,7 +108,8 @@
             <div class="col-md-7 order-md-2">
               <h2 class="featurette-heading" >{{habitacionesNGF.nombre}} <span class="text-muted">Q {{habitacionesNGF.precio}} c/noche</span></h2>
               <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
-              <button type="button" class="btn btn-primary" [routerLink]="['/detalle-habitacion',habitacionesNGF._id]"><i class="bi bi-info-square"></i> Detalle</button>
+              <button type="button" class="btn btn-primary" [routerLink]="['/reservacion',habitacionesNGF._id]"> Reservar</button>
+              <!-- <button type="button" class="btn btn-primary" [routerLink]="['/detalle-habitacion',habitacionesNGF._id]"> Reservar</button> -->
             </div>
             <div class="col-md-5 order-md-1">
               <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
@@ -125,9 +127,9 @@
       <div class="row" >
       <div class='col-xs-12 col-sm-4' *ngFor="let ser of servicioModelGet; let i = index">
           <div class="card mb-3"  >
-            <img src="..." class="card-img-top" alt="...">
+            <!-- <img src="..." class="card-img-top" alt="..."> -->
             <div class="card-body">
-              <h5 class="card-title">{{ser.servicio}}</h5>
+              <h3 class="card-title">{{ser.servicio}}</h3>
               <p class="card-text">{{ser.descripcion}}</p>
               <a href="#" class="btn btn-primary">Detalle</a>
             </div>
