--- a/src/app/components/hoteles/hoteles.component.html
+++ b/src/app/components/hoteles/hoteles.component.html
@@ -61,11 +61,12 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="adminEditarHotel()">Guardar</button>
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="adminEditarHotel(hotelId._id)">Guardar</button>
             </div>
         </div>
     </div>
 </div>
+
 
 <!-- Modal Eliminar Usuario -->
 <div class="modal fade " id="modalEliminarHotel" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
