--- a/src/app/components/registro/registro.component.html
+++ b/src/app/components/registro/registro.component.html
@@ -42,6 +42,10 @@
                                 <label for="address" class="form-label">Direccion</label>
                                 <input type="text" class="form-control" id="address" placeholder="Tu direccion" name="direccion" #direccion="ngModel" [(ngModel)]="usuarioModelAdd.direccion">
                             </div>
+                            <div class="col-12">
+                                <label for="imagen" class="form-label">Imagen</label>
+                                <input type="text" class="form-control" id="imagen" placeholder="Tu imagen" name="imagen" #imagen="ngModel" [(ngModel)]="usuarioModelAdd.imagen">
+                            </div>
 
                             <!-- <div class="col-12">
                                 <label for="address2" class="form-label">Fecha de Nacimiento <span class="text-muted"></span></label>
