--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -5,36 +5,34 @@
             <div class="row gy-4 gx-5">
                 <div class="col-lg-4 col-md-6">
                     <h5 class="h1 text-white">Travel Trip.</h5>
-                    <p class="small text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
-                    <p class="small text-muted mb-0">&copy; Copyrights. All rights reserved. <a class="text-primary" href="#">Bootstrapious.com</a></p>
+                    <p class="small text-muted">Empresa de Gestor de Hoteles, para reservaciones de viajes en todo el mundo</p>
+                    <p class="small text-muted mb-0">&copy; Copyrights. All rights reserved. <a class="text-primary" href="#">Jonatan Panjoj</a></p>
                 </div>
                 <div class="col-lg-2 col-md-6">
-                    <h5 class="text-white mb-3">Quick links</h5>
+                    <h5 class="text-white mb-3">Links Rapidos</h5>
                     <ul class="list-unstyled text-muted">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Get started</a></li>
-                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#" routerLink='/principal'>Home</a></li>
+
+                        <li><a href="#" routerLink='/historial'>Perfil</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-2 col-md-6">
-                    <h5 class="text-white mb-3">Quick links</h5>
+                    <h5 class="text-white mb-3">Links</h5>
                     <ul class="list-unstyled text-muted">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Get started</a></li>
-                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#" routerLink='/principal'>Home</a></li>
+
+                        <li><a href="#" routerLink='/historial'>Perfil</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <h5 class="text-white mb-3">Newsletter</h5>
-                    <p class="small text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
-                    <form action="#">
-                        <div class="input-group mb-3">
-                            <input class="form-control" type="text" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
-                            <button class="btn btn-primary" id="button-addon2" type="button"><i class="fas fa-paper-plane"></i></button>
-                        </div>
-                    </form>
+                    <h5 class="text-white mb-3">Noticias</h5>
+                    <p class="small text-muted">Nuestra empresa busca dar el mejor servicio de hoteles</p>
+
+                        <i class="bi bi-facebook"></i>
+                        <a href="#" routerLink='/historial'><i class="bi bi-twitter"></i></a>
+                        <a href="#" routerLink='/historial'><i class="bi bi-github"></i></a>
+                        <a href="#" routerLink='/historial'><i class="bi bi-youtube"></i></a>
+
                 </div>
             </div>
         </div>
