--- a/src/app/components/hoteles-pais/hoteles-pais.component.html
+++ b/src/app/components/hoteles-pais/hoteles-pais.component.html
@@ -1,10 +1,9 @@
-<div class="container" style='margin-bottom: 150px;'>
+<!-- <div class="container" style='margin-bottom: 150px;'>
 
     <div class="col-xs-12 col-sm-4" *ngFor="let hotelesNGF of hotelModelGet; let i = index">
     <h1>Hoteles de {{hotelesNGF.pais}}</h1>
     <hr>
         <div class="card mb-3">
-            <!-- <img src="..." class="card-img-top" alt="..."> -->
             <div class="card-body">
             <h5 class="card-title">{{hotelesNGF.nombre}}</h5>
             <p class="card-text">{{hotelesNGF.direccion}}</p>
@@ -13,4 +12,20 @@
             </div>
         </div>
     </div>
+</div> -->
+
+<br> <br> <br>
+<div class="container">
+    <h1>Hoteles de {{idPaisHotel}}</h1> <hr> <br>
+    <section class="container-tips" >
+      <div class="container-box" *ngFor='let hotelesNGF of hotelModelGet'>
+          <div class="box">
+              <div class="box__icon" [routerLink]="['/habitaciones-hotel',hotelesNGF._id]" (click)='obtenerHabitacionesPorHotel(hotelesNGF._id)'><img src="{{hotelesNGF.imagen}}"  style='width: 100px; height: 100px; border-radius: 50%;' class="box__img"></div>
+              <div class="box__content">
+                  <h3 class="box__title">{{hotelesNGF.nombre}}</h3><hr class="red-line">
+                  <p class="box__txt">{{hotelesNGF.direccion}}</p>
+              </div>
+          </div>
+      </div>
+    </section>
 </div>
