--- a/src/app/components/historial/historial.component.html
+++ b/src/app/components/historial/historial.component.html
@@ -6,8 +6,8 @@ transform: translateX(-50%) translateY(-35%);">
     <div class="pic">
       <img src="{{identidad.imagen}}" alt="">
     </div>
-    <div class="name">{{identidad.nombre}}</div>
-    <div class="desc">{{identidad.correo}}</div>
+    <div class="name">{{usuarioObtenido.nombre}}</div>
+    <div class="desc">{{usuarioObtenido.correo}}</div>
     <div class="sm">
       <a href="#" routerLink='/historial'><i class="bi bi-facebook"></i></a>
       <a href="#" routerLink='/historial'><i class="bi bi-twitter"></i></a>
